--- a/src/client/app/components/reports/report.component.html
+++ b/src/client/app/components/reports/report.component.html
@@ -1,34 +1,26 @@
-
-
-<table id='report-table' class='table'>
-	<thead>
-		<th>Status</th>
-		<th>Host</th>
-		<th>last 24 hours</th>
-		<th>last Week</th>
-		<th>downtime last 24 hours</th>
-	</thead>
-	<tbody>
-		<tr *ngFor='#report of reports'>
-			<td class='status'>
-				<span *ngIf='report.status.currentOutage' class='label label-danger'>offline</span>
-				<span *ngIf='!report.status.currentOutage' class='label label-success'>online</span>
-			</td>
-			<td class='host' data-title='Host'>
+<div class="page-header">
+	<h1>IIU Lab Sites</h1>
+	<hr>
+</div>
+<div class="row">
+	<div class="col-sm-4" *ngFor='#report of reports'>
+		<div *ngIf='!report.status.currentOutage' class='card card-success card-inverse'>
+			<div class='card-header card-success'>
 				{{report.service.name}}
-			</td>
-			<td class='uptime' data-title='last 24 hours'>
-				{{report.status.last24Hours.uptime}}%
-			</td>
-			<td class='uptime' data-title='last week'>
-				{{report.status.lastWeek.uptime}}%
-			</td>
-			<td class='downtime' data-title='downtime last 24 hours'>
-				<span *ngIf='report.status.last24Hours.downtime' class='label label-danger'>
-					<span>{{report.status.last24Hours.downtime/60000}} minutes</span>
-				</span>
-			</td>
-		</tr>
-	</tbody>
-	
-</table>
+			</div>
+			<div class='card-block bg-white'>
+				<span>Uptime: {{report.status.last24Hours.uptime}}</span>
+			</div> 
+		</div>
+		<div *ngIf='report.status.currentOutage'class='card card-danger card-inverse'>
+			<div class='card-header card-danger'>
+				{{report.service.name}}
+			</div>
+			<div class='card-block bg-white'>
+				
+				Uptime: {{report.status.last24Hours.uptime}}
+
+			</div> 
+		</div>
+	</div>
+</div>
