completely changed the theme of the app. New look and feel plus some restructuring of the app.

--- a/src/client/app/components/dashboard/dashboard.component.html
+++ b/src/client/app/components/dashboard/dashboard.component.html
@@ -1,5 +1,42 @@
-<topnav></topnav>
-<sidebar></sidebar>
-<section class="main-container" [ngClass]="{sidebarPushRight: isActive}">	
-	<router-outlet></router-outlet>
-</section>
+<div id="page-wrapper" [ngClass]="{'open': toggle}">
+	 <div id="sidebar-wrapper">
+        <ul class="sidebar">
+            <li class="sidebar-main">
+                <a (click)="toggleSidebar()">
+                    Sauron
+                    <span class="menu-icon glyphicon glyphicon-transfer"></span>
+                </a>
+            </li>
+            <li class="sidebar-title"><span>NAVIGATION</span></li>
+            <li class="sidebar-list">
+                <!-- <a [routerLink]="['Dashboard']">Dashboard <span class="menu-icon fa fa-tachometer"></span></a> -->
+            </li>
+            <li class="sidebar-list">
+                <!-- <a [routerLink]="['Tables']">Tables <span class="menu-icon fa fa-table"></span></a> -->
+            </li>
+        </ul>
+        <div class="sidebar-footer">
+            <div class="col-xs-4">
+                <a href="https://github.com/ziyasal/rdash-angular2" target="_blank">
+                    Github
+                </a>
+            </div>
+            <div class="col-xs-4">
+                <a href="javascript:void(0)" target="_blank">
+                    About
+                </a>
+            </div>
+            <div class="col-xs-4">
+                <a href="javascript:void(0)">
+                    Support
+                </a>
+            </div>
+        </div>
+    </div>
+	<div id="content-wrapper">
+        <div class="page-content">
+        <topnav></topnav>
+        <router-outlet></router-outlet>
+        </div>
+    </div>
+</div>
