--- a/src/client/app/components/sidebar/sidebar.component.html
+++ b/src/client/app/components/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<button class="btn btn-default" id="toggle-sidebar" type="button" (click)="eventCalled()">
+<!-- <button class="btn btn-default" id="toggle-sidebar" type="button" (click)="eventCalled()">
     &#9776;
 </button>
 <nav class="sidebar" [ngClass]="{sidebarPushRight: isActive}">
@@ -6,8 +6,7 @@
         <a [routerLink]="['Home']" class="list-group-item">
             <i class="fa fa-fw fa-dashboard"></i> Dashboard
         </a>
-        <!-- <a [routerLink]="['/RTL-Dashboard']" class="list-group-item" (click)="eventCalled()">
-            <i class="fa fa-fw fa-dashboard"></i> RTL Dashboard
-        </a> -->
     </ul>
 </nav>
+ -->
+
