--- a/src/client/app/components/topnav/topnav.component.html
+++ b/src/client/app/components/topnav/topnav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-inverse navbar-fixed-top topnav">
+<!-- <nav class="navbar navbar-dark bg-inverse navbar-fixed-top topnav">
     <div class="collapse navbar-toggleable-xs clearfix text-center">
         <a class="navbar-brand" (click)="gotoDashboard()">Project Sauron</a>
         
@@ -7,3 +7,65 @@
 </nav>
 
 
+ -->
+
+ <div class="row header">
+                <div class="col-xs-12">
+                    <div class="user pull-right">
+                        <div class="item dropdown">
+                            <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">
+                                <img src="assets/avatar.jpg">
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-right">
+                                <li class="dropdown-header">
+                                    Joe Bloggs
+                                </li>
+                                <li class="divider"></li>
+                                <li class="link">
+                                    <a href="javascript:void(0)">
+                                        Profile
+                                    </a>
+                                </li>
+                                <li class="link">
+                                    <a href="javascript:void(0)">
+                                        Menu Item
+                                    </a>
+                                </li>
+                                <li class="link">
+                                    <a href="javascript:void(0)">
+                                        Menu Item
+                                    </a>
+                                </li>
+                                <li class="divider"></li>
+                                <li class="link">
+                                    <a href="javascript:void(0)">
+                                        Logout
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="item dropdown">
+                            <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">
+                                <i class="fa fa-bell-o"></i>
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-right">
+                                <li class="dropdown-header">
+                                    Notifications
+                                </li>
+                                <li class="divider"></li>
+                                <li>
+                                    <a href="javascript:void(0)">Server Down!</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="meta">
+                        <div class="page">
+                            Sauron
+                        </div>
+                        <div class="breadcrumb-links">
+                            Sauron / Dashboard
+                        </div>
+                    </div>
+                </div>
+            </div>
