--- a/src/client/app/components/login/login.component.html
+++ b/src/client/app/components/login/login.component.html
@@ -2,9 +2,11 @@ l<div class="login-page">
 	<div class="row">
 		<div class="col-lg-4 col-lg-offset-4">
         	<!-- <img src="assets/img/SB-admin.png" width="150px" class="user-avatar" /> -->
+        	<div><i class="fa fa-eye fa-5x" aria-hidden="true"></i></div>
 			<h1>Project Sauron</h1>
 			<form role="form">
 				<div class="form-content">
+
 					<div class="form-group">
 						<input type="text" ng-model="name" class="form-control input-underline input-lg" id="" placeholder="Email">
 					</div>
