--- a/src/client/app/components/topnav/topnav.component.html
+++ b/src/client/app/components/topnav/topnav.component.html
@@ -18,7 +18,7 @@
                             </a>
                             <ul class="dropdown-menu dropdown-menu-right">
                                 <li class="dropdown-header">
-                                    Joe Bloggs
+                                    Lab Admin
                                 </li>
                                 <li class="divider"></li>
                                 <li class="link">
@@ -38,13 +38,13 @@
                                 </li>
                                 <li class="divider"></li>
                                 <li class="link">
-                                    <a href="javascript:void(0)">
+                                    <a [routerLink]="['Login']">
                                         Logout
                                     </a>
                                 </li>
                             </ul>
                         </div>
-                        <div class="item dropdown">
+                       <!--  <div class="item dropdown">
                             <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">
                                 <i class="fa fa-bell-o"></i>
                             </a>
@@ -57,6 +57,11 @@
                                     <a href="javascript:void(0)">Server Down!</a>
                                 </li>
                             </ul>
+                        </div> -->
+                        <div class ="item dropdown">
+                        	<a href="javascript:void(0)">
+                        		<i class="fa fa-refresh" aria-hidden="true"></i>
+                        	</a>
                         </div>
                     </div>
                     <div class="meta">
