renamed previous dashboard component as home and created a new true dashboard component for the home dashboard screen

--- a/src/client/app/components/home/home.component.html
+++ b/src/client/app/components/home/home.component.html
@@ -9,7 +9,7 @@
             </li>
             <li class="sidebar-title"><span>NAVIGATION</span></li>
             <li class="sidebar-list">
-                <a [routerLink]="['Dashboard']">Dashboard <span class="menu-icon fa fa-tachometer"></span></a>
+                <a [routerLink]="['Report']"> <span class="menu-icon fa fa-tachometer"></span></a>
             </li>
             <li class="sidebar-list">
                 <!-- <a [routerLink]="['Tables']">Tables <span class="menu-icon fa fa-table"></span></a> -->
