--- a/src/client/app/components/login/login.component.html
+++ b/src/client/app/components/login/login.component.html
@@ -15,7 +15,7 @@ l<div class="login-page">
 						<input type="password" class="form-control input-underline input-lg" id="" placeholder="Password">
 					</div>
 				</div>
-				<a class="btn rounded-btn" (click)="gotoDashboard()"> Log in </a>				
+				<a class="btn rounded-btn" (click)="goToHome()"> Log in </a>				
 				&nbsp;
 				<!-- <a type="submit" class="btn rounded-btn" (click)="gotoSignup()">Register</a> -->
 			</form>
