--- a/src/client/app/components/dashboard/dashboard.component.html
+++ b/src/client/app/components/dashboard/dashboard.component.html
@@ -19,13 +19,19 @@
 	</div>
 	<div class='col-md-4'>
 		<div class='widget'>
+      <div class='widget-header'>
+        Server Temperature
+      </div>
 			<div class='widget-body medium-adjust'>
-				Server Temperature
+				
 			</div>
 		</div>
 	</div>
 	<div class='col-md-4'>
 		<div class='widget'>
+      <div class='widget-header'>
+        Service Desk Tickets
+      </div>
 			<div class='widget-body medium-adjust'>
 				<base-chart class="chart"
                 [data]="doughnutChartData"
@@ -40,6 +46,9 @@
 <div class='row'>
 	<div class='col-md-8'>
 		<div class='widget'>
+      <div class='widget-header'>
+        www.phiresearchlab.org Metrics
+      </div>
 			<div class='widget-body medium-adjust'>
 				 <base-chart class='chart' 
                 [data]='lineChartData'
@@ -54,8 +63,11 @@
 	</div>
 	<div class='col-md-4'>
 		<div class='widget'>
+      <div class='widget-header'>
+        Upcoming Lab Reservations
+      </div>
 			<div class='widget-body medium-adjust'>
-				Upcoming Lab Reservations
+				
 			</div>
 		</div>
 	</div>
