added mock table for lab reservations. added moment the he project. need to work on the clock

--- a/src/client/app/components/dashboard/dashboard.component.html
+++ b/src/client/app/components/dashboard/dashboard.component.html
@@ -30,7 +30,7 @@
 	<div class='col-md-4'>
 		<div class='widget'>
       <div class='widget-header'>
-        Service Desk Tickets
+        Service Desk Tickets (mocked data)
       </div>
 			<div class='widget-body medium-adjust'>
 				<base-chart class="chart"
@@ -47,7 +47,7 @@
 	<div class='col-md-8'>
 		<div class='widget'>
       <div class='widget-header'>
-        www.phiresearchlab.org Metrics
+        www.phiresearchlab.org Metrics (mocked data)
       </div>
 			<div class='widget-body medium-adjust'>
 				 <base-chart class='chart' 
@@ -67,7 +67,44 @@
         Upcoming Lab Reservations
       </div>
 			<div class='widget-body medium-adjust'>
-				
+				<div class='table-responsive'>
+          <table class='table'>
+            <thead>
+              <tr>
+                <th class='text-center'>ID</th>
+                <th>Engagement</th>
+                <th>Date</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>IIUSD-123</td>
+                <td>S3P Training</td>
+                <td>04/28/2016</td>
+              </tr>
+              <tr>
+                <td>IIUSD-146</td>
+                <td>DHIS 508 Training</td>
+                <td>04/30/2016</td>
+              </tr>
+              <tr>
+                <td>IIUSD-156</td>
+                <td>DHIS 508 Training</td>
+                <td>05/01/2016</td>
+              </tr>
+              <tr>
+                <td>IIUSD-189</td>
+                <td>Rhapsody Training</td>
+                <td>05/06/2016</td>
+              </tr>
+               <tr>
+                <td>IIUSD-191</td>
+                <td>Rhapsody Training</td>
+                <td>05/07/2016</td>
+              </tr>
+            </tbody>
+          </table>    
+        </div>
 			</div>
 		</div>
 	</div>
