--- a/src/client/app/components/dashboard/dashboard.component.html
+++ b/src/client/app/components/dashboard/dashboard.component.html
@@ -20,10 +20,23 @@
 	<div class='col-md-4'>
 		<div class='widget'>
       <div class='widget-header'>
-        Server Temperature
+        Server Room Temp
       </div>
 			<div class='widget-body medium-adjust'>
-				
+				<div class="sk-circle">
+          <div class="sk-circle1 sk-child"></div>
+          <div class="sk-circle2 sk-child"></div>
+          <div class="sk-circle3 sk-child"></div>
+          <div class="sk-circle4 sk-child"></div>
+          <div class="sk-circle5 sk-child"></div>
+          <div class="sk-circle6 sk-child"></div>
+          <div class="sk-circle7 sk-child"></div>
+          <div class="sk-circle8 sk-child"></div>
+          <div class="sk-circle9 sk-child"></div>
+          <div class="sk-circle10 sk-child"></div>
+          <div class="sk-circle11 sk-child"></div>
+          <div class="sk-circle12 sk-child"></div>
+        </div>
 			</div>
 		</div>
 	</div>
@@ -64,7 +77,7 @@
 	<div class='col-md-4'>
 		<div class='widget'>
       <div class='widget-header'>
-        Upcoming Lab Reservations
+        Upcoming Lab Reservations (mocked data)
       </div>
 			<div class='widget-body medium-adjust'>
 				<div class='table-responsive'>
@@ -97,11 +110,37 @@
                 <td>Rhapsody Training</td>
                 <td>05/06/2016</td>
               </tr>
-               <tr>
+              <tr>
                 <td>IIUSD-191</td>
                 <td>Rhapsody Training</td>
                 <td>05/07/2016</td>
               </tr>
+              <tr>
+                <td>IIUSD-191</td>
+                <td>Rhapsody Training</td>
+                <td>05/07/2016</td>
+              </tr>
+              <tr>
+                <td>IIUSD-191</td>
+                <td>Rhapsody Training</td>
+                <td>05/07/2016</td>
+              </tr>
+              <tr>
+                <td>IIUSD-191</td>
+                <td>Rhapsody Training</td>
+                <td>05/07/2016</td>
+              </tr>
+              <tr>
+                <td>IIUSD-191</td>
+                <td>Rhapsody Training</td>
+                <td>05/07/2016</td>
+              </tr>
+              <tr>
+                <td>IIUSD-191</td>
+                <td>Rhapsody Training</td>
+                <td>05/07/2016</td>
+              </tr>
+
             </tbody>
           </table>    
         </div>
