--- a/src/client/app/components/dashboard/dashboard.component.html
+++ b/src/client/app/components/dashboard/dashboard.component.html
@@ -9,9 +9,10 @@
     </div>
     <div class='row'>
       <div>
-        <div class='widget'>
+        <div *ngIf='weatherReport' class='widget'>
           <div class='widget-body small'>
-            Weather
+            <img src='{{weatherReport.current_observation.icon_url}}'>
+            {{weatherReport.current_observation.temp_f}} &deg; 
           </div>
         </div>
       </div>
@@ -157,7 +158,7 @@
       </div>
   			<div class='widget-body'>
           <div class='row'>
-      			 <div class="col-lg-2 col-md-6 col-xs-12" *ngFor='#report of reports'>
+      			 <div class="col-lg-3 col-md-6 col-xs-12" *ngFor='#report of reports'>
                 <div *ngIf='!report.status.currentOutage.currentOutage' class='widget'>
                   <div class='widget-header widget-success center'>
                     <i class='fa fa-arrow-up'></i> {{report.service.name}} 
