--- a/src/client/app/components/topnav/topnav.component.html
+++ b/src/client/app/components/topnav/topnav.component.html
@@ -59,9 +59,9 @@
                             </ul>
                         </div> -->
                         <div class ="item dropdown">
-                        	<a href="javascript:void(0)">
-                        		<i class="fa fa-refresh" aria-hidden="true"></i>
-                        	</a>
+                        	<!-- <a > -->
+                        		<i (click)='reloadPage()' class="fa fa-refresh" aria-hidden="true"></i>
+                        	<!-- </a> -->
                         </div>
                     </div>
                     <div class="meta">
