--- a/src/client/app/components/dashboard/dashboard.component.html
+++ b/src/client/app/components/dashboard/dashboard.component.html
@@ -1,17 +1,24 @@
 <div class='row'>
 	<div class='col-md-4'>
     <div class='row'>
-  		<div class='widget'>
-  			<div class='widget-body small'>
-  				Clock
+  		<div class='widget widget-clock'>
+  			<div *ngIf='currentDate' class='widget-body small'>
+  				 <div class="clock-wrapper">
+              <div class="clock-content">
+                  <h1 id="date" class="date">{{currentDate}}</h1>
+                  <h3 id="time" class="time">{{currentTime}}</h3>
+              </div>
+          </div>
   			</div>
   		</div>
     </div>
     <div class='row'>
       <div>
-        <div *ngIf='weatherReport' class='widget'>
-          <div class='widget-body small'>
+        <div *ngIf='weatherReport' class='widget widget-weather'>
+          <div class='widget-body small-adjust'>
+            <h1>Atlanta</h1>
             <img src='{{weatherReport.current_observation.icon_url}}'>
+            {{weatherReport.current_observation.weather}}
             {{weatherReport.current_observation.temp_f}} &deg; 
           </div>
         </div>
@@ -153,31 +160,33 @@
 <div class='row'>
 	<div class='col-md-12'>
 		<div class='widget'>
-      <div class='widget-header'>
+     <!--  <div class='widget-header'>
         Website Monitoring
-      </div>
+      </div> -->
   			<div class='widget-body'>
           <div class='row'>
       			 <div class="col-lg-3 col-md-6 col-xs-12" *ngFor='#report of reports'>
                 <div *ngIf='!report.status.currentOutage.currentOutage' class='widget'>
-                  <div class='widget-header widget-success center'>
+                  <!-- <div class='widget-header widget-success center'>
                     <i class='fa fa-arrow-up'></i> {{report.service.name}} 
-                  </div>
-                  <div class='widget-body'>
+                  </div> -->
+                  <div class='widget-body widget-success'>
                     <div class='center'>
+                      <h4><i class='fa fa-arrow-up'></i> {{report.service.name}}</h4>
                       <div class='clearfix'>Host: {{report.service.host}}</div>
                       <div class='clearfix'>Uptime: {{report.status.last24Hours.uptime}}%</div>
                     </div>
                   </div> 
                 </div>
                 <div *ngIf='report.status.currentOutage.currentOutage'class='widget'>
-                  <div class='widget-header widget-danger center'>
+                 <!--  <div class='widget-header widget-danger center'>
                     <i class='fa fa-exclamation-triangle fa-lg'></i> {{report.service.name}} 
-                  </div>
-                  <div class='widget-body'>
+                  </div> -->
+                  <div class='widget-body widget-danger'>
                     <div class='center'>
+                      <h4><i class='fa fa-exclamation-triangle fa-lg'></i> {{report.service.name}} </h4>
                       <div class='clearfix'>Host: {{report.service.host}}</div>
-                      <div class='clearfix'>Down since: {{report.status.currentOutage.outageDuration}}</div>
+                      <div class='clearfix'>Down: {{report.status.currentOutage.outageDuration}}</div>
                     </div>
                   </div> 
                 </div>
