removed references to non existent pips

--- a/src/client/app/components/dashboard/dashboard.component.html
+++ b/src/client/app/components/dashboard/dashboard.component.html
@@ -87,7 +87,7 @@
       <div class='widget-header'>
         Upcoming Lab Reservations (mocked data)
       </div>
-			<div class='widget-body medium-adjust'>
+			<div class='widget-body medium-adjust overflow-adjust'>
 				<div class='table-responsive'>
           <table class='table'>
             <thead>
