--- a/src/client/app/components/topnav/topnav.component.html
+++ b/src/client/app/components/topnav/topnav.component.html
@@ -58,11 +58,11 @@
                                 </li>
                             </ul>
                         </div> -->
-                        <div class ="item dropdown">
+                        <!-- <div class ="item dropdown"> -->
                         	<!-- <a > -->
-                        		<i (click)='reloadPage()' class="fa fa-refresh" aria-hidden="true"></i>
+                        		<!-- <i (click)='reloadPage()' class="fa fa-refresh" aria-hidden="true"></i> -->
                         	<!-- </a> -->
-                        </div>
+                        <!-- </div> -->
                     </div>
                     <div class="meta">
                         <div class="page">
