refactor: renamed "report" component to "site-monitor" component. moved site-monitor component to its own component

--- a/src/client/app/components/home/home.component.html
+++ b/src/client/app/components/home/home.component.html
@@ -12,7 +12,7 @@
                 <a [routerLink]="['Dashboard']">Dashboard<span class="menu-icon fa fa-tachometer"></span></a>
             </li>
             <li class="sidebar-list">
-                <a [routerLink]="['Report']">Websites<span class="menu-icon fa fa-table"></span></a>
+                <!-- <a [routerLink]="['Report']">Websites<span class="menu-icon fa fa-table"></span></a> -->
             </li>
         </ul>
         <div class="sidebar-footer">
