--- a/src/client/app/components/site-monitor/site-monitor.component.css
+++ b/src/client/app/components/site-monitor/site-monitor.component.css
@@ -1,10 +1,10 @@
 .widget-success{
-  background:#689F38;
+  background:#00897B;
   color:white;
 }
 
 .widget-danger {
-  background: #F44336;
+  background: #D32F2F;
   color:white;
 }
 
