--- a/src/client/app/components/dashboard/dashboard.component.html
+++ b/src/client/app/components/dashboard/dashboard.component.html
@@ -24,7 +24,7 @@
         Server Room Temp
       </div>
 			<div class='widget-body medium-adjust'>
-				<div class="sk-circle">
+				<!-- <div class="sk-circle">
           <div class="sk-circle1 sk-child"></div>
           <div class="sk-circle2 sk-child"></div>
           <div class="sk-circle3 sk-child"></div>
@@ -37,7 +37,7 @@
           <div class="sk-circle10 sk-child"></div>
           <div class="sk-circle11 sk-child"></div>
           <div class="sk-circle12 sk-child"></div>
-        </div>
+        </div> -->
 			</div>
 		</div>
 	</div>
@@ -133,40 +133,6 @@
 
 <div class='row'>
 	<div class='col-md-12'>
-		<div class='widget'>
-      <div class='widget-header'>
-        Website Monitoring
-      </div>
-  			<div class='widget-body'>
-          <div class='row'>
-      			 <div class="col-lg-3 col-md-6 col-xs-12" *ngFor='#report of reports'>
-                <div *ngIf='!report.status.currentOutage.currentOutage' class='widget'>
-                  <!-- <div class='widget-header widget-success center'>
-                    <i class='fa fa-arrow-up'></i> {{report.service.name}} 
-                  </div> -->
-                  <div class='widget-body widget-success'>
-                    <div class='center'>
-                      <h4><i class='fa fa-arrow-up'></i> {{report.service.name}}</h4>
-                      <div class='clearfix'>Host: {{report.service.host}}</div>
-                      <div class='clearfix'>Uptime: {{report.status.last24Hours.uptime}}%</div>
-                    </div>
-                  </div> 
-                </div>
-                <div *ngIf='report.status.currentOutage.currentOutage'class='widget'>
-                 <!--  <div class='widget-header widget-danger center'>
-                    <i class='fa fa-exclamation-triangle fa-lg'></i> {{report.service.name}} 
-                  </div> -->
-                  <div class='widget-body widget-danger'>
-                    <div class='center'>
-                      <h4><i class='fa fa-exclamation-triangle fa-lg'></i> {{report.service.name}} </h4>
-                      <div class='clearfix'>Host: {{report.service.host}}</div>
-                      <div class='clearfix'>Down since: {{report.status.currentOutage.outageDuration}}</div>
-                    </div>
-                  </div> 
-                </div>
-              </div>
-              </div>
-  			</div>
-		</div>
+		<site-monitor></site-monitor>
 	</div>
 </div>
