Changed colors and styling based on KBs recommendations

--- a/src/client/app/components/dashboard/dashboard.component.css
+++ b/src/client/app/components/dashboard/dashboard.component.css
@@ -27,6 +27,14 @@
   text-align: center;
 }
 
+.table {
+  color: #FFF;
+}
+
+.t-head {
+  background: #354962;
+}
+
 .square-it {
 	position: relative;
 	width: 50%;
