--- a/src/client/app/components/dashboard/dashboard.component.html
+++ b/src/client/app/components/dashboard/dashboard.component.html
@@ -83,8 +83,8 @@
 			<div class='widget-body medium-adjust overflow-adjust'>
 				<div class='table-responsive'>
           <table class='table'>
-            <thead>
-              <tr>
+            <thead >
+              <tr class='t-head'>
                 <th class='text-center'>ID</th>
                 <th>Engagement</th>
                 <th>Date</th>
@@ -94,7 +94,7 @@
               <tr *ngFor='#reservation of jiraReservations'>
                 <td>{{reservation.key}}</td>
                 <td>{{reservation.summary}}</td>
-                <td>{{reservation.reservedDate}}</td>
+                <td>{{reservation.reservedDate | date:'short'}}</td>
               </tr>
             </tbody>
           </table>    
