--- a/src/client/app/components/site-monitor/site-monitor.component.css
+++ b/src/client/app/components/site-monitor/site-monitor.component.css
@@ -1,11 +1,17 @@
 .widget-success{
-  background:#00897B;
-  color:white;
+    background-image:
+	    linear-gradient(
+	      #1EBF4F, #1B903F
+	    );
+  color:#FFF;
 }
 
 .widget-danger {
-  background: #D32F2F;
-  color:white;
+  background-image:
+	    linear-gradient(
+	      #FE4059, #B53041
+	    );
+  color:#FFF;
 }
 
 .widget-warning {
