changed table name

--- a/src/client/app/components/dashboard/dashboard.component.html
+++ b/src/client/app/components/dashboard/dashboard.component.html
@@ -78,7 +78,7 @@
 	<div class='col-md-4'>
 		<div class='widget'>
       <div class='widget-header'>
-        Upcoming Lab Reservations
+        Lab Reservations
       </div>
 			<div class='widget-body medium-adjust overflow-adjust'>
 				<div class='table-responsive'>
