refactored lab-reservations section into its own componenets

--- a/src/client/app/components/dashboard/dashboard.component.html
+++ b/src/client/app/components/dashboard/dashboard.component.html
@@ -76,7 +76,8 @@
 		</div>
 	</div>
 	<div class='col-md-4'>
-		<div class='widget'>
+    <lab-reservations></lab-reservations>
+		<!-- <div class='widget'>
       <div class='widget-header'>
         Lab Reservations
       </div>
@@ -100,7 +101,7 @@
           </table>    
         </div>
 			</div>
-		</div>
+		</div> -->
 	</div>
 </div>
 
