--- a/src/client/app/components/dashboard/dashboard.component.html
+++ b/src/client/app/components/dashboard/dashboard.component.html
@@ -39,19 +39,7 @@
     </div>
     <div class='row'>
       <div>
-        <div class='widget'>
-          <div class='widget-header'>
-            Service Desk Tickets (mocked data)
-          </div>
-          <div class='widget-body medium-adjust'>
-            <base-chart class="chart"
-                    [data]="doughnutChartData"
-                    [labels]="doughnutChartLabels"
-                    [chartType]="doughnutChartType"
-                    (chartHover)="chartHovered($event)"
-                    (chartClick)="chartClicked($event)"></base-chart>
-          </div>
-        </div>
+        <issue-metrics></issue-metrics>
       </div>
     </div>
   </div>
