successfully pulling raspberry pi temperature data, still need to style

--- a/src/client/app/components/dashboard/dashboard.component.html
+++ b/src/client/app/components/dashboard/dashboard.component.html
@@ -19,11 +19,10 @@
     </div>
   </div>
     <div class='col-md-4'>
-    <div class='widget'>
-      <div class='widget-body small'>
+      <div>
+        <server-sensor></server-sensor>
       </div>
     </div>
-  </div>
 </div>
 <!-- TIME, WEATHER, SERVER TEMP END -->
 
