working service sensor readouts, will need to look at optimizing

--- a/src/client/app/components/server-sensor/server-sensor.component.html
+++ b/src/client/app/components/server-sensor/server-sensor.component.html
@@ -1,5 +1,5 @@
-<div class='widget widget-server' *ngIf='sensorData'>
-  <div class='widget-body small'>
+<div class='widget widget-server' >
+  <div class='widget-body small' *ngIf='sensorData'>
   	<p>Server Room Temperature: {{sensorData.sensorData.temperature}}&deg;C </p>
   	<p>Humidity: {{sensorData.sensorData.humidity}}%</p>
   </div>
