--- a/src/client/app/components/site-monitor/site-monitor.component.html
+++ b/src/client/app/components/site-monitor/site-monitor.component.html
@@ -1,6 +1,6 @@
 <div class='widget'>
   <div class='widget-header'>
-    Website Monitoring
+    Website Monitoring <i class="fa fa-refresh" aria-hidden="true" (click)='getReports()'></i>
   </div>
 	<div class='widget-body'>
     <div class='row'>
