--- a/src/client/app/components/dashboard/dashboard.component.html
+++ b/src/client/app/components/dashboard/dashboard.component.html
@@ -63,6 +63,11 @@
 			</div>
 		</div>
 	</div>
+  <div class='col-md-4'>
+    <div>
+        <unresolved-issues></unresolved-issues>
+      </div>
+  </div>
 </div>
 
 
