--- a/src/client/app/components/unresolved-issues/unresolved-issues.component.html
+++ b/src/client/app/components/unresolved-issues/unresolved-issues.component.html
@@ -1,6 +1,6 @@
 <div class='widget'>
   <div class='widget-header'>
-    Lab Reservations
+    Service Desk Tickets
   </div>
 	<div class='widget-body medium-adjust overflow-adjust'>
 		<div class='table-responsive'>
@@ -8,15 +8,17 @@
         <thead >
           <tr class='t-head'>
             <th class='text-center'>Key</th>
-            <th>Engagement</th>
-            <th>Date</th>
+            <th>Summary</th>
+            <th>Assignee</th>
+            <th>Creator</th>
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor='#reservation of jiraReservations'>
-            <td>{{reservation.key}}</td>
-            <td>{{reservation.summary}}</td>
-            <td>{{reservation.reservedDate | date:'short'}}</td>
+          <tr *ngFor='#unresolved of unresolvedList'>
+            <td>{{unresolved.key}}</td>
+            <td>{{unresolved.summary}}</td>
+            <td>{{unresolved.assignee}}</td>
+            <td>{{unresolved.creator}}</td>
           </tr>
         </tbody>
       </table>    
