weather backgroun color changes dynamically based on outside temperature

--- a/src/client/app/components/server-sensor/server-sensor.component.css
+++ b/src/client/app/components/server-sensor/server-sensor.component.css
@@ -1,3 +1,16 @@
 .widget-server{
 	color:white;
+	background: #009688;
+}
+
+.center {
+	text-align: center;
+}
+
+.right{
+	text-align: right;
+}
+
+.small-adjust {
+	height:150px;
 }
