--- a/src/client/app/components/server-sensor/server-sensor.component.html
+++ b/src/client/app/components/server-sensor/server-sensor.component.html
@@ -5,7 +5,7 @@
   </div> -->
   <div class='widget-body small-adjust' >
   	<h5>Server Room (Mocked)</h5>
-  	<h1 class='right'>{{mockTempF}}&deg;C </h1>
+  	<h1 class='right'>{{mockTempF}}&deg; </h1>
   	<p class='right'>Humidity: {{mockHumidity}}%</p>
   </div>
 </div>
