changed weather style thresholds

--- a/src/client/app/components/weather/weather.component.html
+++ b/src/client/app/components/weather/weather.component.html
@@ -1,4 +1,4 @@
-<div *ngIf='weatherReport' class='widget widget-weather' [style.background-color]='getStyle()'>
+<div *ngIf='weatherReport' class='widget widget-weather' [style.background-color]='setStyle()'>
   <div class='widget-body small-adjust'>
     
     <div class='col-md-6'>
