--- a/src/client/app/components/server-sensor/server-sensor.component.html
+++ b/src/client/app/components/server-sensor/server-sensor.component.html
@@ -1,11 +1,12 @@
 <div class='widget widget-server' >
-  <!-- <div class='widget-body small' *ngIf='sensorData'>
-  	<p>Server Room Temperature: {{sensorData.sensorData.temperature}}&deg;C </p>
-  	<p>Humidity: {{sensorData.sensorData.humidity}}%</p>
-  </div> -->
-  <div class='widget-body small-adjust' >
+  <div class='widget-body small-adjust' *ngIf='sensorData' [style.background-color]='setStyle()'>
+  	<h5>Server Room</h5>
+  	<h1 class='right'>{{sensorData.sensorData.temperature}}&deg; </h1>
+  	<p class='right'>Humidity: {{sensorData.sensorData.humidity}}%</p>
+  </div>
+ <!--  <div class='widget-body small-adjust' >
   	<h5>Server Room (Mocked)</h5>
   	<h1 class='right'>{{mockTempF}}&deg; </h1>
   	<p class='right'>Humidity: {{mockHumidity}}%</p>
-  </div>
+  </div> -->
 </div>
