responsive ellipsis for long service names

--- a/src/client/app/components/site-monitor/site-monitor.component.html
+++ b/src/client/app/components/site-monitor/site-monitor.component.html
@@ -11,7 +11,7 @@
             </div> -->
             <div class='widget-body widget-success'>
               <div class='center'>
-                <h4><i class='fa fa-arrow-up'></i> {{report.service.name}}</h4>
+                <h4 class='truncate'><i class='fa fa-arrow-up'></i> {{report.service.name}}</h4>
                 <div class='clearfix'>Host: {{report.service.host | ellipsis: 4}}</div>
                 <div class='clearfix'>Upsince: {{report.status.upsince}}</div>
               </div>
