WIP doughnut legend

--- a/src/client/app/components/issue-metrics/issue-metrics.component.html
+++ b/src/client/app/components/issue-metrics/issue-metrics.component.html
@@ -7,6 +7,7 @@
             [data]="issues"
             [labels]="doughnutChartLabels"
             [chartType]="doughnutChartType"
+            [legend]="doughnutChartLegend"
             (chartHover)="chartHovered($event)"
             (chartClick)="chartClicked($event)"></base-chart>
   </div>
