--- a/src/client/app/components/server-sensor/server-sensor.component.html
+++ b/src/client/app/components/server-sensor/server-sensor.component.html
@@ -1,12 +1,8 @@
 <div class='widget widget-server' >
   <div class='widget-body small-adjust' *ngIf='sensorData' [style.background-color]='setStyle()'>
-  	<h5>Server Room</h5>
-  	<h1 class='right'>{{sensorData.temperature | number: '2.1-1'}}&deg; </h1>
-  	<p class='right'>Humidity: {{sensorData.humidity}}%</p>
+  	<h3 class='title'>Server Room</h3>
+  	<h1 class='right content'>{{sensorData.temperature | number: '2.1-1'}}&deg; </h1>
+  	<p class='right content'>Humidity: {{sensorData.humidity}}%</p>
   </div>
- <!--  <div class='widget-body small-adjust' >
-  	<h5>Server Room (Mocked)</h5>
-  	<h1 class='right'>{{mockTempF}}&deg; </h1>
-  	<p class='right'>Humidity: {{mockHumidity}}%</p>
-  </div> -->
+
 </div>
