--- a/src/client/app/components/weather/weather.component.css
+++ b/src/client/app/components/weather/weather.component.css
@@ -7,6 +7,16 @@
 	color:white;
 }
 
+.title {
+	margin-top: 2px;
+	margin-bottom: 2px;
+}
+
+.content {
+	margin-top: 2px;
+	margin-bottom: 2px;
+}
+
 .right {
 	text-align: right;
 }
