--- a/src/client/app/components/weather/weather.component.html
+++ b/src/client/app/components/weather/weather.component.html
@@ -1,17 +1,10 @@
-<div *ngIf='weatherReport' class='widget widget-weather' [style.background-color]='setStyle()'>
-  <div class='widget-body small-adjust'>
-    
-    <div class='col-md-6'>
-      <h2>{{weatherReport.current_observation.display_location.city}}</h2>
-    </div>
-    <div class='col-md-6'>
-      <div class='right'><h1>{{weatherReport.current_observation.temp_f}}&deg;</h1></div>
-      <div class='right'>
+<div *ngIf='weatherReport' class='widget widget-weather'>
+  <div class='widget-body small-adjust' [style.background-color]='setStyle()'>
+      <h3 class='title'>{{weatherReport.current_observation.display_location.city}}</h3>
+      <h1 class='right content'>{{weatherReport.current_observation.temp_f}}&deg;</h1>
+      <p class='right content'>
         <img src='{{weatherReport.current_observation.icon_url}}'>
         {{weatherReport.current_observation.weather}}
-      </div>
-      
-    </div>
-    
+      </p>
   </div>
 </div>
