--- a/src/client/app/components/dashboard/dashboard.component.html
+++ b/src/client/app/components/dashboard/dashboard.component.html
@@ -33,7 +33,7 @@
   <div class='col-md-4'>
     <div class='row'>
       <div>
-        <issue-metrics></issue-metrics>
+        <!-- <issue-metrics></issue-metrics> -->
       </div>
     </div>
     <div class='row'>
@@ -47,7 +47,7 @@
 
 <div class='row'>
 	<div class='col-md-8'>
-		<div class='widget'>
+		<!-- <div class='widget'> -->
       <div class='widget-header'>
         www.phiresearchlab.org Metrics (mocked data)
       </div>
