--- a/src/client/app/components/site-monitor/site-monitor.component.html
+++ b/src/client/app/components/site-monitor/site-monitor.component.html
@@ -6,21 +6,22 @@
     <div class='row'>
 			 <div class="col-lg-3 col-md-6 col-xs-12" *ngFor='#report of reports'>
           <div *ngIf='!report.status.currentOutage.currentOutage' class='widget'>
-            <!-- <div class='widget-header widget-success center'>
-              <i class='fa fa-arrow-up'></i> {{report.service.name}} 
-            </div> -->
-            <div class='widget-body widget-success'>
+            <div *ngIf="report.status.last24Hours.numberOutages < 1" class="widget-body widget-success">
               <div class='center'>
                 <h4 class='truncate'><i class='fa fa-arrow-up'></i> {{report.service.name}}</h4>
                 <div class='clearfix'>Host: {{report.service.host}}</div>
                 <div class='clearfix'>Uptime: {{report.status.upsince}}</div>
               </div>
-            </div> 
+            </div>
+            <div *ngIf="report.status.last24Hours.numberOutages > 1" class="widget-body widget-warn">
+              <div class='center'>
+                <h4 class='truncate'><i class='fa fa-arrow-up'></i> {{report.service.name}}</h4>
+                <div class='clearfix'>Host: {{report.service.host}}</div>
+                <div class='clearfix'>Uptime: {{report.status.upsince}}</div>
+              </div>
+            </div>  
           </div>
-          <div *ngIf='report.status.currentOutage.currentOutage'class='widget'>
-           <!--  <div class='widget-header widget-danger center'>
-              <i class='fa fa-exclamation-triangle fa-lg'></i> {{report.service.name}} 
-            </div> -->
+          <div *ngIf='report.status.currentOutage.currentOutage' class='widget'>
             <div class='widget-body widget-danger'>
               <div class='center'>
                 <h4 class='truncate'><i class='fa fa-exclamation-triangle fa-lg'></i> {{report.service.name}} </h4>
