--- a/src/client/app/components/lab-reservations/lab-reservations.component.html
+++ b/src/client/app/components/lab-reservations/lab-reservations.component.html
@@ -1,6 +1,6 @@
 <div class='widget'>
   <div class='widget-header'>
-    Lab Reservations
+    Upcoming Lab Reservations
   </div>
 	<div class='widget-body medium-adjust overflow-adjust'>
 		<div class='table-responsive'>
